# antz

./: .gitignore  Cargo.toml  README.md  notes.txt  pyproject.toml  requirements.txt
.github/workflows/: bandit.yml  pylint.yml  python-package.yml
antz/: run.py
antz/infrastructure/: __init__.py  job.py
antz/infrastructure/config/: base.py  job_decorators.py  local_submitter.py
antz/infrastructure/core/: job.py  manager.py  mutable_job.py  pipeline.py  status.py  submitter_job.py  variables.py
antz/infrastructure/log/: multiproc_logging.py
antz/infrastructure/submitters/: local.py
antz/instrastructure/: job.py
antz/instrastructure/config/: base.py
antz/jobs/: __init__.py  assert_variable.py  change_variable.py  compare.py  copy.py  create_pipelines_from_matrix.py  delete.py  explode_pipeline.py  if_then.py  nop.py  parallel_pipelines.py  restart_pipeline.py  run_script.py  set_variable_from_function.py  while.py
test/infrastructure/: __init__.py  test_job.py
test/infrastructure/config/: test_base_configs.py  test_job_configs.py  test_pipeline_configs.py
test/infrastructure/core/: test_job.py  test_mutable_job.py  test_pipeline.py  test_variables.py
test/infrastructure/submitters/: test_local_submitter.py
test/jobs/: test_copy.py  test_create_pipelines_from_matrix.py  test_delete.py  test_run_script.py
